...
  "multiSelectMode": "多选模式",
  "mutualGroupsWithHer": "我和他的共同群聊",
  "myAccount": "我的账号",
  "myAddress": "我的地址",
  "myFavorites": "我的收藏",
  "myLive": "我的直播",
  "myQrcode": "我的二维码",
  "name": "名称",
  "nearbyPeopleExplain": "附近的用户可以查看你的个人资料并给你发送信息。这可能会帮助你找到新朋友，但也可能会引起过多的关注。你可以随时停止分享你的个人资料。\n\n你的电话号码将会被隐藏。",
  "nearbyPeopleTips": "和附近的人交换联系方式，结交新朋友",
  "needContinueWorkHard": "需要继续加油",
  "needSubmitEffect": "需要确认提交，该操作才生效",
  "networkException": "网络连接异常",
...
  "perMinuteOnce": "每分钟只能请求一次",
  "permission": "permission",
  "permissionAcquisitionFailed": "权限获取失败",
  "personalCard": "个人名片",
  "personalInfoDesc": "个人信息描述",
  "personalInfoTip": "个人信息提示",
  "personalInformation": "个人信息",
  "pin": "置顶",
  "pinChat": "置顶聊天",
  "pinCodeFillTips": "请把方格填满",
  "pinned": "已置顶",
  "play": "播放",
  "pleaseCheckNetwork": "请检查你的网络设置。",
...
  "resetFilters": "重置筛选",
  "quickFilters": "快速筛选",
  "retypePassword": "重新输入密码",
  "revoke": "撤回",
  "ringing": "已响铃...",
  "ruRu": "俄罗斯俄语",
  "saveQrCode": "保存二维码",
  "saveSuccess": "保存成功",
  "scan": "扫一扫",
  "scanQrCode": "扫描二维码",
  "scanQrCodeBusinessCard": "扫描二维码名片",
  "scanQrcodeAddFriend": "扫一扫上面的二维码图案，加我为朋友",
  "scanResult": "扫描结果",
  "scannerResult": "scannerResult",
  "search": "搜索",
  "searchChatContent": "查找聊天内容",
  "searchChatRecord": "查找聊天记录",
  "searchError": "搜索错误",
...
  "sentByMe": "我发送的",
  "sentByOthers": "他人发送的",
  "setChatBackground": "设置当前聊天背景",
  "setNickname": "设置昵称",
  "setParam": "设置%s",
  "setting": "设置",
  "share": "分享",
  "siginQ": "已经有账号了？",
  "signInWith": "用%s登录",
  "signature": "个性签名",
  "signatureInputHint": "签名输入提示",
  "signaturePlaceholder": "签名占位符",
  "signatureTips": "签名提示",
...
